--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ python:
 install:
   - pip install -r requirements.txt
 
-script: python -m unittest src/test.py
+script: python -m unittest src/tests.py
