--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: python
-
-python:
-  - "3.6"
-  - "3.7"
+matrix:
+    include:
+        - python: 3.6
+          dist: trusty
+          sudo: false
+        - python: 3.7
+          dist: xenial
+          sudo: true
 
 install:
   - pip install -r requirements.txt
 
-script: python -m unittest src/tests.py
+script: coverage run src/tests.py
+
+after_success:
+  - codecov
