--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+certifi==2019.6.16
+chardet==3.0.4
+codecov==2.0.15
+coverage==4.5.3
 ecdsa==0.13.2
+idna==2.8
 mpmath==1.1.0
+requests==2.22.0
 sympy==1.4
+urllib3==1.25.3
